--- a/aptos/light-client/Cargo.toml
+++ b/aptos/light-client/Cargo.toml
@@ -3,7 +3,7 @@ name = "aptos-lc"
 version = "1.0.1"
 edition = { workspace = true }
 repository = { workspace = true }
-license = "BUSL-1.1"
+license = { workspace = true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
