--- a/aptos/core/Cargo.toml
+++ b/aptos/core/Cargo.toml
@@ -3,7 +3,7 @@ name = "aptos-lc-core"
 version = "1.0.1"
 edition = { workspace = true }
 repository = { workspace = true }
-license = "BUSL-1.1"
+license = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
