--- a/ethereum/Cargo.toml
+++ b/ethereum/Cargo.toml
@@ -15,6 +15,7 @@ env_logger = "0.11.3"
 ethereum-types = "0.14.1"
 glob = "0.3.1"
 getset = "0.1.2"
+hex = "0.4.3"
 log = "0.4.22"
 reqwest = "0.12.5"
 serde = "1.0.203"
