--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -134,7 +134,7 @@ jobs:
           forge test
         working-directory: ${{ github.workspace }}/aptos/solidity/contracts/
 
-  move-unit-tests:
+  move-tests:
     needs: changes
     runs-on: buildjet-16vcpu-ubuntu-2204
     if: needs.changes.outputs.ethereum == 'true'
@@ -152,13 +152,24 @@ jobs:
           python3 --version
           curl -fsSL "https://aptos.dev/scripts/install_cli.py" | python3
           echo "PATH=$HOME/.local/bin:$PATH" | tee -a $GITHUB_ENV
-      - name: Compile verifier contract
-        run: |
-          aptos move compile
-        working-directory: ${{ github.workspace }}/ethereum/move
-      - name: Run Move tests
+      - name: Run unit tests
         run: |
           aptos move test
+        working-directory: ${{ github.workspace }}/ethereum/move
+      - name: Test verifier contract
+        run: |
+          aptos move compile
+
+          for file in $(find "sources/fixtures" -name "fixture_*.json"); do
+            aptos move run-script --compiled-script-path build/plonk-verifier/bytecode_scripts/run_verification.mv --json-file $file --local >> out.txt
+          done
+
+          for outcome in $(grep "success" out.txt | awk '{ print $2 }'); do
+            if [[ "${outcome%?}" != "true" ]]; then
+              echo "Verification failed, exiting..."
+              exit 1
+            fi
+          done
         working-directory: ${{ github.workspace }}/ethereum/move
 
   cycle-count-regression:
