Set to 1 retention day instead of the default (90)

--- a/.github/workflows/fixtures.yml
+++ b/.github/workflows/fixtures.yml
@@ -43,6 +43,7 @@ jobs:
           path: ${{ github.workspace }}/aptos/solidity/contracts/src/plonk_fixtures/${{ matrix.fixture }}_fixture.json
           if-no-files-found: error
           overwrite: true
+          retention-days: 1
 
   create-pull-request:
     needs: generate-fixtures
