ci: Update fixtures in nightly job (#92)
* ci: Update fixtures on a nightly job

* Parallelize and test flow

* Test E2E

* Prep for review

* Set to 1 retention day instead of the default (90)

* chore: Update fixtures (#94)

Co-authored-by: samuelburnham <45365069+samuelburnham@users.noreply.github.com>

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/fixtures.yml
+++ b/.github/workflows/fixtures.yml
@@ -1,4 +1,5 @@
-# Rebuilds proof fixtures for Solidity and Move for smart contract verification tests
+# Rebuilds proof fixtures for Solidity and Move (TBD) for smart contract verification tests
+# The fixtures are located in `aptos/solidity/contracts/src/plonk_fixtures`
 # Then opens a pull request with the changes
 # Note: This workflow takes over 30 minutes due to parallel E2E proof generation for `inclusion` and `epoch_change`
 name: Update fixtures
@@ -16,16 +17,9 @@ concurrency:
 jobs:
   generate-fixtures:
     runs-on: warp-ubuntu-latest-x64-32x
-    timeout-minutes: 90
     strategy:
       matrix:
         fixture: [inclusion, epoch_change]
-        language: [solidity, move]
-        include:
-          - fixture-path: aptos/solidity/contracts/src/plonk_fixtures
-            language: solidity
-          - fixture-path: ethereum/move/sources/fixtures
-            language: move
     steps:
       - uses: actions/checkout@v4
         with:
@@ -36,15 +30,17 @@ jobs:
         uses: ./.github/actions/setup
         with:
           pull_token: ${{ secrets.REPO_TOKEN }}
-      - name: Generate ${{ matrix.language }} fixtures
+      - name: Generate Solidity `inclusion` fixtures
         run: |
-          cargo run --release -- --program ${{ matrix.fixture }} --language ${{ matrix.language }}
-        working-directory: ${{ github.workspace }}/fixture-generator
+          cargo run --release -- --program ${{ matrix.fixture }}
+        working-directory: ${{ github.workspace }}/aptos/solidity/fixture-generator
+      - name: Check for diff
+        run: git diff
       - name: Upload fixture artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.language }}_${{ matrix.fixture }}_fixture.json
-          path: ${{ github.workspace }}/${{ matrix.fixture-path }}/${{ matrix.fixture }}_fixture.json
+          name: ${{ matrix.fixture }}_fixture
+          path: ${{ github.workspace }}/aptos/solidity/contracts/src/plonk_fixtures/${{ matrix.fixture }}_fixture.json
           if-no-files-found: error
           overwrite: true
           retention-days: 1
@@ -52,23 +48,16 @@ jobs:
   create-pull-request:
     needs: generate-fixtures
     runs-on: ubuntu-latest
-    env:
-      SOLIDITY_FIXTURE_PATH: aptos/soldity/contracts/src/plonk_fixtures
-      MOVE_FIXTURE_PATH: ethereum/move/sources/fixtures
     steps:
       - uses: actions/checkout@v4
-      - name: Download Solidity fixtures
+      - name: Download inclusion fixture
         uses: actions/download-artifact@v4
         with:
-          path: ${{ github.workspace }}/${{ env.SOLIDITY_FIXTURE_PATH }}
-          pattern: "solidity_*"
+          path: ${{ github.workspace }}/aptos/solidity/contracts/src/plonk_fixtures/
+          pattern: "*_fixture"
           merge-multiple: true
-      - name: Download Move fixtures
-        uses: actions/download-artifact@v4
-        with:
-          path: ${{ github.workspace }}/${{ env.MOVE_FIXTURE_PATH }}
-          pattern: "move_*"
-          merge-multiple: true
+      - name: Check for diff
+        run: git diff
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
@@ -77,6 +66,6 @@ jobs:
           commit-message: "chore: Update fixtures"
           labels: "automated-issue"
           body: |
-            This is an automated PR updating the proof fixtures for Solidity and Move, which are used for smart contract verification tests.
+            This is an automated PR updating the proof fixtures for Solidity and Move (TBD), which are used for smart contract verification tests.
 
             Workflow run: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
