feat: committee program + bench
fix: as str

fix: fix ProvingMode/str conversion

feat: benchmark

fix: fixed zkvm logs validate update

refactor: zkvm logs validate update

refactor: zkvm logs process update

refactor: remove dbg logs

refactor: clearer logs

refactor: remove log

fix: length of hash for output

fix: compiled proper keccak usage

fix: proper keccak usage

refactor: keccak instead of merkle root

refactor: compile program

refactor: log cycles

fix: assert in execute

New sync committee should be the one we had in store

fix: fix order of outputs

feat: wip #65

--- a/ethereum/Cargo.toml
+++ b/ethereum/Cargo.toml
@@ -19,9 +19,11 @@ hex = "0.4.3"
 log = "0.4.22"
 reqwest = "0.12.5"
 serde = "1.0.203"
+serde_json = "1.0.120"
 sha2 = "0.9"
 ssz_types = "0.6"
 thiserror = "1.0.61"
+tiny-keccak = "2.0.2"
 tokio = "1.38.0"
 tree_hash = "0.6"
 tree_hash_derive = "0.6"
