feat: get storage proof

--- a/ethereum/Cargo.toml
+++ b/ethereum/Cargo.toml
@@ -13,6 +13,7 @@ anyhow = "1.0.86"
 clap = "4.5.8"
 env_logger = "0.11.3"
 ethereum-types = "0.14.1"
+ethers-core = "2.0.14"
 glob = "0.3.1"
 getset = "0.1.2"
 hex = "0.4.3"
