--- a/ethereum/Cargo.toml
+++ b/ethereum/Cargo.toml
@@ -12,6 +12,8 @@ repository = "https://github.com/lurk-lab/zk-light-clients"
 anyhow = "1.0.86"
 clap = "4.5.8"
 env_logger = "0.11.3"
+ethereum_ssz = "0.5.4"
+ethereum_ssz_derive = "0.5.4"
 ethereum-types = "0.14.1"
 ethers-core = "2.0.14"
 glob = "0.3.1"
