--- a/aptos/solidity/fixture-generator/Cargo.toml
+++ b/aptos/solidity/fixture-generator/Cargo.toml
@@ -19,3 +19,5 @@ serde = { workspace = true, features = ["derive"] }
 clap = { workspace = true, features = ["derive", "env"] }
 tracing = { workspace = true }
 alloy-sol-types = { workspace = true }
+
+ethereum-lc = { path = "../../../ethereum/light-client" }
