--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,9 @@
 [submodule "aptos/solidity/contracts/lib/forge-std"]
 	path = aptos/solidity/contracts/lib/forge-std
-	url = https://github.com/foundry-rs/forge-std@v1.9.1
-	# https://stackoverflow.com/questions/5126765/how-to-get-rid-of-git-submodules-untracked-status
-	ignore = dirty
-[submodule "aptos/solidity/contracts/lib/sphinx-contracts"]
-	path = aptos/solidity/contracts/lib/sphinx-contracts
-	url = https://github.com/lurk-lab/sphinx-contracts@v1.0.1
+	url = https://github.com/foundry-rs/forge-std
 [submodule "aptos/solidity/contracts/lib/openzeppelin-contracts"]
 	path = aptos/solidity/contracts/lib/openzeppelin-contracts
-	url = https://github.com/openzeppelin/openzeppelin-contracts@5.0.2
+	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "aptos/solidity/contracts/lib/sphinx-contracts"]
+	path = aptos/solidity/contracts/lib/sphinx-contracts
+	url = https://github.com/lurk-lab/sphinx-contracts
