--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ path = "fixture-generator/src/bin/main.rs"
 [dependencies]
 sphinx-sdk = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0", features = ["plonk"] }
 sphinx-prover = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0" }
-ethereum-lc = { path = "ethereum/light-client" }
+ethereum-lc = { path = "ethereum/light-client",  features = ["ethereum"] }
 aptos-lc = { path = "aptos/light-client", features = ["aptos"] }
 serde_json = { version = "1", features = ["alloc"] }
 serde = { version = "1.0.193", features = ["derive"] }
