--- a/.github/workflows/fixtures.yml
+++ b/.github/workflows/fixtures.yml
@@ -17,6 +17,7 @@ concurrency:
 jobs:
   generate-fixtures:
     runs-on: warp-ubuntu-latest-x64-32x
+    timeout-minutes: 90
     strategy:
       matrix:
         fixture: [inclusion, epoch_change]
@@ -30,10 +31,10 @@ jobs:
         uses: ./.github/actions/setup
         with:
           pull_token: ${{ secrets.REPO_TOKEN }}
-      - name: Generate Solidity `inclusion` fixtures
+      - name: Generate Solidity fixtures
         run: |
-          cargo run --release -- --program ${{ matrix.fixture }}
-        working-directory: ${{ github.workspace }}/aptos/solidity/fixture-generator
+          cargo run --release -- --program ${{ matrix.fixture }} --language solidity
+        working-directory: ${{ github.workspace }}/fixture-generator
       - name: Check for diff
         run: git diff
       - name: Upload fixture artifact
@@ -41,6 +42,20 @@ jobs:
         with:
           name: ${{ matrix.fixture }}_fixture
           path: ${{ github.workspace }}/aptos/solidity/contracts/src/plonk_fixtures/${{ matrix.fixture }}_fixture.json
+          if-no-files-found: error
+          overwrite: true
+          retention-days: 1
+      - name: Generate Move fixtures
+        run: |
+          cargo run --release -- --program ${{ matrix.fixture }} --language move
+        working-directory: ${{ github.workspace }}/fixture-generator
+      - name: Check for diff
+        run: git diff
+      - name: Upload fixture artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.fixture }}_fixture
+          path: ${{ github.workspace }}/ethereum/move/sources/fixtures/${{ matrix.fixture }}_fixture.json
           if-no-files-found: error
           overwrite: true
           retention-days: 1
@@ -54,6 +69,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: ${{ github.workspace }}/aptos/solidity/contracts/src/plonk_fixtures/
+          pattern: "*_fixture"
+          merge-multiple: true
+      - name: Download inclusion fixture
+        uses: actions/download-artifact@v4
+        with:
+          path: ${{ github.workspace }}/ethereum/move/sources/fixtures/
           pattern: "*_fixture"
           merge-multiple: true
       - name: Check for diff
