--- a/ethereum/.cargo/config.toml
+++ b/ethereum/.cargo/config.toml
@@ -8,6 +8,7 @@ xclippy = [
     "-Wclippy::all",
     "-Wclippy::cast_lossless",
     "-Wclippy::checked_conversions",
+    "-Wclippy::clone_on_copy",
     "-Wclippy::dbg_macro",
     "-Wclippy::disallowed_methods",
     "-Wclippy::derive_partial_eq_without_eq",
@@ -35,11 +36,13 @@ xclippy = [
     "-Wclippy::needless_for_each",
     "-Wclippy::needless_pass_by_value",
     "-Wclippy::option_option",
+    "-Wclippy::redundant_clone",
     "-Wclippy::same_functions_in_if_condition",
     "-Wclippy::single_match_else",
     "-Wclippy::trait_duplication_in_bounds",
     "-Wclippy::unnecessary_wraps",
     "-Wclippy::unnested_or_patterns",
+    "-Wclippy::unnecessary_to_owned",
     "-Wnonstandard_style",
     "-Wrust_2018_idioms",
     "-Wtrivial_numeric_casts",
