--- a/ethereum/core/Cargo.toml
+++ b/ethereum/core/Cargo.toml
@@ -13,6 +13,7 @@ ethers-core = { workspace = true }
 hex = { workspace = true }
 getset = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true, optional = true }
 sha2 = { workspace = true }
 thiserror = { workspace = true }
 tiny-keccak = { workspace = true, features = ["keccak"] }
@@ -24,3 +25,9 @@ ethereum-types = { workspace = true }
 ssz_types = { workspace = true, features = ["arbitrary"] }
 tree_hash = { workspace = true }
 tree_hash_derive = { workspace = true }
+
+[features]
+default = []
+ethereum = [
+    "dep:serde_json"
+]
