--- a/.github/workflows/fixtures.yml
+++ b/.github/workflows/fixtures.yml
@@ -5,6 +5,9 @@
 name: Update fixtures
 
 on:
+  push:
+    branches:
+      - "fix/fixtures"
   workflow_dispatch: {}
   # Once per day at 00:00 UTC
   schedule:
