--- a/.github/workflows/fixtures.yml
+++ b/.github/workflows/fixtures.yml
@@ -17,13 +17,20 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
+
 jobs:
   generate-fixtures:
     runs-on: warp-ubuntu-latest-x64-32x
+    timeout-minutes: 90
     strategy:
       matrix:
         fixture: [inclusion, epoch_change]
         language: [solidity, move]
+        include:
+          - fixture-path: aptos/solidity/contracts/src/plonk_fixtures
+            language: solidity
+          - fixture-path: ethereum/move/sources/fixtures
+            language: move
     steps:
       - uses: actions/checkout@v4
         with:
@@ -34,15 +41,18 @@ jobs:
         uses: ./.github/actions/setup
         with:
           pull_token: ${{ secrets.REPO_TOKEN }}
-      - name: Generate ${{ matrix.language }} fixtures
-        run: |
-          cargo run --release -- --program ${{ matrix.fixture }} --language ${{ matrix.language }}
+      #- name: Generate ${{ matrix.language }} fixtures
+      #  run: |
+      #    cargo run --release -- --program ${{ matrix.fixture }} --language ${{ matrix.language }}
+      #  working-directory: ${{ github.workspace }}/fixture-generator
+      - run: |
+          echo "Test fixture" > ${{ github.workspace }}/${{ matrix.fixture-path }}/${{ matrix.fixture }}_fixture.json
         working-directory: ${{ github.workspace }}/fixture-generator
       - name: Upload fixture artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.language }}_${{ matrix.fixture }}_fixture
-          path: ${{ github.workspace }}/fixture-generator/${{ matrix.fixture }}_fixture.json
+          name: ${{ matrix.language }}_${{ matrix.fixture }}_fixture.json
+          path: ${{ github.workspace }}/${{ matrix.fixture-path }}/${{ matrix.fixture }}_fixture.json
           if-no-files-found: error
           overwrite: true
           retention-days: 1
@@ -50,20 +60,36 @@ jobs:
   create-pull-request:
     needs: generate-fixtures
     runs-on: ubuntu-latest
+    env:
+      SOLIDITY_FIXTURE_PATH: aptos/soldity/contracts/src/plonk_fixtures
+      MOVE_FIXTURE_PATH: ethereum/move/sources/fixtures
     steps:
       - uses: actions/checkout@v4
       - name: Download Solidity fixtures
         uses: actions/download-artifact@v4
         with:
-          path: ${{ github.workspace }}/aptos/solidity/contracts/src/plonk_fixtures/
-          pattern: "solidity_.*_fixture"
+          path: ${{ github.workspace }}/${{ env.SOLIDITY_FIXTURE_PATH }}
+          pattern: "solidity_*"
           merge-multiple: true
+      - name: Rename Solidity fixtures
+        run: |
+          for file in solidity_*_fixture.json; do
+            mv "$file" "${file#solidity_}"
+          done
+        working-directory: ${{ github.workspace }}/${{ env.SOLIDITY_FIXTURE_PATH }}
       - name: Download Move fixtures
         uses: actions/download-artifact@v4
         with:
-          path: ${{ github.workspace }}/ethereum/move/sources/fixtures/
-          pattern: "move_.*_fixture"
+          path: ${{ github.workspace }}/${{ env.MOVE_FIXTURE_PATH }}
+          pattern: "move_*"
           merge-multiple: true
+      - name: Rename Move fixtures
+        run: |
+          for file in move_*_fixture.json; do
+            mv "$file" "${file#move_}"
+          done
+        working-directory: ${{ github.workspace }}/${{ env.MOVE_FIXTURE_PATH }}
+      - run: git diff
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
