--- a/.github/workflows/bump-version-PR.yml
+++ b/.github/workflows/bump-version-PR.yml
@@ -47,8 +47,8 @@ jobs:
       - name: Install `tq-rs`
         run: cargo install tq-rs
 
-      # The `release/light-client-v1.0` branch is always truncated, so that patch version merges still are valid Semver
-      # However, when we make the initial `release/light-client-v1.0` version bump, we include the full `1.0.0` in `Cargo.toml`
+      # The `release/<aptos|ethereum>-v1.0` branch is always truncated, so that patch version merges still are valid Semver
+      # However, when we make the initial `release/<aptos|ethereum>-v1.0` version bump, we include the full `1.0.0` in `Cargo.toml`
       # and the release for clarity
       - name: Set branches
         run: |
