--- a/deny.toml
+++ b/deny.toml
@@ -297,7 +297,7 @@ deny = [
     # is a direct dependency of the otherwise banned crate
     #{ name = "ansi_term", version = "=0.11.0", wrappers = [] },
     "dirs", # use https://crates.io/crates/home instead
-    "amcl", # use https://github.com/lurk-lab/bls12_381/ instead
+    "amcl", # use https://github.com/argumentcomputer/bls12_381/ instead
 ]
 
 # List of features to allow/deny
@@ -354,7 +354,7 @@ allow-git = []
 [sources.allow-org]
 # 1 or more github.com organizations to allow git sources for
 # TODO: Enforce the below?
-# github = ["lurk-lab"]
+# github = ["argumentcomputer"]
 # 1 or more gitlab.com organizations to allow git sources for
 # gitlab = [""]
 # 1 or more bitbucket.org organizations to allow git sources for
