--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -45,7 +45,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: lurk-lab/ci-workflows
+          repository: argumentcomputer/ci-workflows
       - uses: ./.github/actions/ci-env
       - uses: actions/checkout@v4
       - name: Setup CI
@@ -74,7 +74,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: lurk-lab/ci-workflows
+          repository: argumentcomputer/ci-workflows
       - uses: ./.github/actions/ci-env
       - uses: actions/checkout@v4
         with:
@@ -110,16 +110,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: lurk-lab/ci-workflows
+          repository: argumentcomputer/ci-workflows
       - uses: ./.github/actions/ci-env
       - uses: actions/checkout@v4
         with:
           submodules: recursive
           token: ${{ secrets.REPO_TOKEN }}
-      - name: Setup CI
-        uses: ./.github/actions/setup
-        with:
-          pull_token: ${{ secrets.REPO_TOKEN }}
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
         with:
@@ -138,6 +134,60 @@ jobs:
           forge test
         working-directory: ${{ github.workspace }}/aptos/solidity/contracts/
 
+  move-tests:
+    needs: changes
+    runs-on: buildjet-16vcpu-ubuntu-2204
+    if: needs.changes.outputs.ethereum == 'true'
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          repository: argumentcomputer/ci-workflows
+      - uses: ./.github/actions/ci-env
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          token: ${{ secrets.REPO_TOKEN }}
+      - name: Install Move
+        run: |
+          python3 --version
+          curl -fsSL "https://aptos.dev/scripts/install_cli.py" | python3
+          echo "PATH=$HOME/.local/bin:$PATH" | tee -a $GITHUB_ENV
+      - name: Check Aptos account balance
+        id: check_balance
+        run: |
+          balance_output=$(aptos account balance --profile testnet)
+          echo "Balance output: $balance_output"
+
+          balance=$(echo $balance_output | jq '.Result[0].balance')
+          echo "Balance value: $balance"
+
+          if [ "$balance" -lt 100000000 ]; then
+            echo "Balance is below threshold. Funding the account..."
+            aptos account fund-with-faucet --profile testnet
+          else
+            echo "Balance is sufficient. No action needed."
+          fi
+        working-directory: ${{ github.workspace }}/ethereum/move
+      - name: Run unit tests
+        run: |
+          aptos move test --named-addresses plonk_verifier_addr=devnet
+        working-directory: ${{ github.workspace }}/ethereum/move
+      - name: Test verifier contract
+        run: |
+          aptos move create-resource-account-and-publish-package --address-name plonk_verifier_addr --profile testnet --seed $(openssl rand -hex 32) --assume-yes
+
+          for file in $(find "sources/fixtures" -name "fixture_*.json"); do
+            aptos move run-script --compiled-script-path build/plonk-verifier/bytecode_scripts/run_verification.mv --json-file $file --profile testnet --local --assume-yes >> out.txt
+          done
+
+          for outcome in $(grep "success" out.txt | awk '{ print $2 }'); do
+            if [[ "${outcome%?}" != "true" ]]; then
+              echo "Verification failed, exiting..."
+              exit 1
+            fi
+          done
+        working-directory: ${{ github.workspace }}/ethereum/move
+
   cycle-count-regression:
     needs: changes
     runs-on: warp-ubuntu-latest-x64-32x
@@ -150,7 +200,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: lurk-lab/ci-workflows
+          repository: argumentcomputer/ci-workflows
       - uses: ./.github/actions/ci-env
       - uses: actions/checkout@v4
       - name: Setup CI
