--- a/fixture-generator/Cargo.toml
+++ b/fixture-generator/Cargo.toml
@@ -3,7 +3,7 @@ version = "1.0.0"
 name = "fixture-generator"
 edition = "2021"
 license = "Apache-2.0"
-repository = "https://github.com/lurk-lab/zk-light-clients"
+repository = "https://github.com/argumentcomputer/zk-light-clients"
 
 resolver = "2"
 
@@ -12,8 +12,9 @@ name = "generate-fixture"
 path = "src/bin/main.rs"
 
 [dependencies]
-sphinx-sdk = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0", features = ["plonk"] }
-sphinx-prover = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0" }
+sphinx-sdk = { git = "ssh://git@github.com/argumentcomputer/sphinx", tag = "v1.0.0", features = ["plonk"] }
+sphinx-prover = { git = "ssh://git@github.com/argumentcomputer/sphinx", tag = "v1.0.0" }
+ethereum-lc = { path = "../ethereum/light-client",  features = ["ethereum"] }
 aptos-lc = { path = "../aptos/light-client", features = ["aptos"] }
 serde_json = { version = "1", features = ["alloc"] }
 serde = { version = "1.0.193", features = ["derive"] }
